Added schedule and .gitignore

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
+  <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
       <a class="navbar-brand" href="#">BCMB Computational Bootcamp 2020</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -37,6 +37,95 @@
       </ul>
     </div>
   </nav>
+  <section>
+  <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="font-weight-light text-center text-lg-left mt-4 mb-0">BCMB Computational Biology Bootcamp</h2>
+          <h4 class="font-weight-light font-italics">Fall 2020</h6>
+          <hr class="mt-2 mb-2">
+
+
+
+        </div>
+      </div>
+    </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+
+      <h4 class="font-weight-light">Schedule</h4>
+
+        <table class="table table-striped well">
+          <thead>
+            <tr>
+              <th style="text-align: right"> </th>
+              <th style="text-align: left"><a href="day1/index.html">Monday</a></th>
+              <th style="text-align: left"><a href="day2/index.html">Tuesday</a></th>
+              <th style="text-align: left"><a href="day3/index.html">Wednesday</a></th>
+              <th style="text-align: left"><a href="day4/index.html">Thursday</a></th>
+              <th style="text-align: left"><a href="day5/index.html">Friday</a></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="text-align: right">9:00 -  9:30</td>
+              <td style="text-align: left">Overview</td>
+              <td style="text-align: left">Homework Answers</td>
+              <td style="text-align: left">Homework Answers</td>
+              <td style="text-align: left">Homework Answers</td>
+              <td style="text-align: left">Homework Answers</td>
+            </tr>
+            <tr>
+              <td style="text-align: right">9:30 - 11:00</td>
+              <td style="text-align: left">Intro Unix &amp; Git</td>
+              <td style="text-align: left">RNA-seq, running unix commands</td>
+              <td style="text-align: left">Python III: Algorithmic Thinking</td>
+              <td style="text-align: left">Pandas for Plots - I</td>
+              <td style="text-align: left">Machine Learning</td>
+            </tr>
+            <tr>
+              <td style="text-align: right">Lunch Exercise</td>
+              <td style="text-align: left">Unix exercises</td>
+              <td style="text-align: left">FastQC / HISAT / SAMtools / StringTie</td>
+              <td style="text-align: left">Algorithms: Binary search</td>
+              <td style="text-align: left">Subset / lineplot / metadata / boxplot</td>
+              <td style="text-align: left">Regression RNA-seq/ChIP-seq</td>
+            </tr>
+            <tr>
+              <td style="text-align: right">2:00 -  2:30</td>
+              <td style="text-align: left">Lunch Exercise Answers</td>
+              <td style="text-align: left">Lunch Exercise Answers</td>
+              <td style="text-align: left">Lunch Exercise Answers</td>
+              <td style="text-align: left">Lunch Exercise Answers</td>
+              <td style="text-align: left">Lunch Exercise Answers</td>
+            </tr>
+            <tr>
+              <td style="text-align: right">2:30 -  4:00</td>
+              <td style="text-align: left">Basic Python</td>
+              <td style="text-align: left">Python functions and data structures</td>
+              <td style="text-align: left">Python IV: FASTA Parser and kmers</td>
+              <td style="text-align: left">Pandas for Plots - II</td>
+              <td style="text-align: left">…</td>
+            </tr>
+            <tr>
+              <td style="text-align: right">Homework</td>
+              <td style="text-align: left">Filtering .SAM using Python</td>
+              <td style="text-align: left">Parsing and summarizing numerical data</td>
+              <td style="text-align: left">Implement kmer matching</td>
+              <td style="text-align: left">Time course / Prettify / hist etc.</td>
+              <td style="text-align: left">HAPPY HOUR!!!</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+
+  </div>
+
+  </section>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="js/bootstrap.min.js"></script>
