General formatting and updates to landing page.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="row">
         <div class="col-12">
           <h2 class="font-weight-light text-center text-lg-left mt-4 mb-0">BCMB Computational Biology Bootcamp</h2>
-          <h4 class="font-weight-light font-italics">Fall 2020</h6>
+          <footer class="blockquote-footer">Fall 2020</footer>
           <hr class="mt-2 mb-2">
 
 
@@ -54,10 +54,22 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
+      <h4 class="font-weight-light">Course Description</h4>
+      <p>This intensive one week class is meant to immerse students in computation, and to provide them with the foundational tools to be able to apply modern computational techniques and appropriate statistics to their data.  Students learn how to work in a command line shell and different “notebook” style computing environments including Jupyter and Rmarkdown.  Throughout the course, students apply these skills to different practical analysis problems for exploratory data analysis, visualization, and interpretation.  The presented problems run the gamut from biophysics to cellular and systems biology to genomics.</p>
 
+      <h4 class="font-weight-light">Course Objectives</h4>
+      <ul>
+        <li>Understand command-line interactions and utilities for navigating computer systems and manipulating files.</li>
+        <li>Identify computational tools, techniques, and resources available for biological data analysis.</li>
+        <li>Determine genomic methodology and/or public data repository best suited to address biological question of interest.</li>
+        <li>Apply standard bioinformatic tools to import, clean, filter, normalize and visualize data.</li>
+        <li>Design and implement computational analysis workflows using standard tools to analyze modern biological datasets, including fits to data with ODEs.</li>
+        <li>Analyze data in a way which maximizes reproducibility, using version control and Jupyter notebook documentation.</li>
+        <li>Predict protein structure and interactions using PyMol.</li>
+      </ul>
       <h4 class="font-weight-light">Schedule</h4>
 
-        <table class="table table-striped well">
+        <table class="table table-striped well table-text-md">
           <thead>
             <tr>
               <th style="text-align: right"> </th>
