day 2 during lecture

--- a/day2/notebooks/Day2-Morning_git.html
+++ b/day2/notebooks/Day2-Morning_git.html
@@ -7932,6 +7932,55 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>But then - you don't want to edit on the "main" branch, but on your own personal branch.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>To make your own branch of the repository and merge new changes from the main branch in VSCode, follow these instructions:</p>
+<ol>
+<li>Open the repository in VSCode.</li>
+<li>Click on the "Source Control" icon in the left sidebar (it looks like a branch with a magnifying glass).</li>
+<li>In the Source Control view, click on the branch name (usually "main") to open the branch dropdown menu.</li>
+<li>Click on the "+" icon next to the branch dropdown menu to create a new branch.</li>
+<li>Enter a descriptive name for your branch and press Enter to create it.</li>
+<li>VSCode will automatically switch to your newly created branch.</li>
+<li>Make the desired changes to the files in your branch.</li>
+<li>Once you have made your changes, save the files.</li>
+<li>In the Source Control view, you will see the changed files listed under "Changes".</li>
+<li>Click on the checkbox next to each file you want to include in the commit.</li>
+<li>Enter a commit message in the text box at the top of the Source Control view.</li>
+<li>Click on the checkmark icon to commit your changes.</li>
+</ol>
+<p>Pause here - I'll make some edits when everyone is caught up, then you can try to merge them:</p>
+<ol>
+<li>To merge new changes from the main branch into your branch, switch back to the main branch by selecting it from the branch dropdown menu.</li>
+<li>Click on the ellipsis (...) icon in the Source Control view and select "Pull".</li>
+<li>VSCode will fetch the latest changes from the remote repository and merge them into your main branch.</li>
+<li>Switch back to your branch by selecting it from the branch dropdown menu.</li>
+<li>Click on the ellipsis (...) icon in the Source Control view and select "Merge Branch".</li>
+<li>Select the main branch as the branch to merge from.</li>
+<li>VSCode will merge the new changes from the main branch into your branch.</li>
+<li>Resolve any merge conflicts, if necessary.</li>
+<li>Once the merge is complete, you can continue working on your branch and repeat the process of committing and pushing your changes.</li>
+</ol>
+<p>By following these instructions, you will be able to create your own branch of the repository, make changes, and merge new changes from the main branch in VSCode.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <h2 id="CoPilot-and-ChatGPT">CoPilot and ChatGPT<a class="anchor-link" href="#CoPilot-and-ChatGPT">¶</a></h2>
 </div>
 </div>
